fixing issue with user icon not showing up

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -215,6 +215,13 @@ main p {
 
 }
 
+h5 {
+	font-size: 0.6em;
+	line-height: 1.5em;
+	font-family: ApexBook;
+	margin-left: 1.5em;
+}
+
 #create-section {
 	background-color: rgba(110,110,110,0.5);
 	width: 100%;
